feat(validator): minor fixes and using artifact naming strategy form master https://github.com/gbif/pipelines/issues/1440